--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -48,3 +48,5 @@ $metadata-sidebar-width-closed: 0;
 $metadata-sidebar-code-open: 480px;
 $metadata-sidebar-code-closed: 0;
 $metadata-sidebar-code-breakpoint: 1200px;
+
+$plotly-modal-breakpoint: 700px;
